2008-09-29  Sven Herzberg  <sven@imendio.com>

	Pass the ABI test

	* engine/sapwood-pixmap.h,
	* engine/sapwood-rc-style.h,
	* engine/sapwood-style.h: pass the ABI test by hiding internal
	functions

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Finally be able to reproduce the double free

	* tests/Makefile.am: properly set the compile flags for the testcase
	* tests/double-free.c (pixbuf_proto_get_socket),
	(pixbuf_proto_request), (sapwood_pixmap_get_for_file),
	(pixbuf_proto_unref_pixmap), (false_func), (main): implemented the
	test (with lots of copied and pasted code - needs more cleanup)
	* tests/sapwood-wrapper: added a wrapper script for the testcase
	execution

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Respect TESTS_ENVIRONMENT as "make check" usually does

	* Makefile.decl: added TESTS_ENVIRONMENT to the test invocation

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added the first testcase

	* tests/Makefile.am,
	* tests/double-free.c: the first testcase

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Added --enable-debug to define ENABLE_DEBUG properly; define
	automatically for developer builds

	* autogen.sh: pass --enable-debug to the configure script
	* configure.in: accept --enable-debug and set ENABLE_DEBUG properly

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Added a folder for the tests

	* Makefile.am: include tests
	* configure.in: build tests/Makefile
	* tests/Makefile.am: skeleton

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Add GTest support to the build system

	* Makefile.decl: file copied and adjusted to the project needs
	* Makefile.am,
	* demos/Makefile.am,
	* engine/Makefile.am,
	* protocol/Makefile.am,
	* server/Makefile.am: include Makefile.decl to support gtest
	everywhere

2008-09-23  Sven Herzberg  <sven@imendio.com>

	Fix a possible double-free intorduced by r15921

	* server/sapwood-server.c (process_buffer): drop the g_free() call on
	the node; the g_hash_table_remove() will care about this
