@@ -1,5 +1,12 @@
 2008-09-29  Sven Herzberg  <sven@imendio.com>
 
+	Fix "make check" finally
+
+	* server/Makefile.am: don't perform abi checks anymore, it's only
+	useful on the library
+
+2008-09-29  Sven Herzberg  <sven@imendio.com>
+
 	Pass the ABI test
 
 	* engine/sapwood-pixmap.h,
